added some changes in html structure, fixed views

--- a/front-end/app/views/about.html
+++ b/front-end/app/views/about.html
@@ -1,1 +1,2 @@
-<p>This is the about view.</p>
+<h3>To jest strona o projekcie</h3>
+Będzie na niej coś ciekawego i interesującego, na pewno, wszyscy w to wierzymy, cześć.
