--- a/front-end/app/views/contact.html
+++ b/front-end/app/views/contact.html
@@ -1,2 +1,2 @@
-<h1>asdf</h1>
-<p>Tu pojawią się opcje kontaktowe do najlepszych ludzi.</p>
+<h3>Autorzy</h3>
+<p> Martyna Filiks <br> Dominika Jusińska <br> Dominika Mikołajka <br> Andrzej Nisztuk <br> Piotr Szczepaniak</p>
