--- a/front-end/app/views/main.html
+++ b/front-end/app/views/main.html
@@ -1,8 +1,4 @@
-<div class="jumbotron">
-  <p>Placeholder dla mapy.</p>
-</div>
-
-
+<h3>Chat</h3>
 <div class="input-group">
   <input type="text" class="form-control" placeholder="Hej, co słychać?">
   <span class="input-group-btn">
@@ -11,5 +7,5 @@
 </div>
 
 <div class="jumbotron">
-  <p>Sekcja ostatnich wpisów, do zrobienia w drugim semestrze. Będzie <i>fancy</i>!</p>
+  <p>Placeholder dla chatu.</p>
 </div>
