--- a/front-end/app/styles/main.css
+++ b/front-end/app/styles/main.css
@@ -81,3 +81,15 @@ body {
     border-bottom: 0;
   }
 }
+
+#map {
+  height: 100%;
+}
+
+#mapcontainer{
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1%;
+  height: 45%;
+  width: 45%;
+}
