--- a/front-end/app/views/about.html
+++ b/front-end/app/views/about.html
@@ -1,2 +1,2 @@
 <h3>To jest strona o projekcie</h3>
-Będzie na niej coś ciekawego i interesującego, na pewno, wszyscy w to wierzymy, cześć.
+Do uzupełnienia.
