--- a/front-end/app/styles/main.css
+++ b/front-end/app/styles/main.css
@@ -7,6 +7,10 @@
 
 body {
   padding: 0;
+  height: 100%;
+}
+html {
+  height: 100%;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -89,7 +93,8 @@ body {
 #mapcontainer{
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3%;
   margin-bottom: 1%;
-  height: 45%;
+  height: 60%;
   width: 45%;
 }
